--- a/plugin/locale/ar/LC_MESSAGES/BhWeather.po
+++ b/plugin/locale/ar/LC_MESSAGES/BhWeather.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: ArabicSavior\n"
+"Project-Id-Version: BhWeather\n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
 "Language-Team: Arabic <rrrr53@hotmail.com>\n"
@@ -13,5 +13,5 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n==0 || n==1);\n"
 "Language: ar\n"
 
-msgid "ArabicSavior"
+msgid "BhWeather"
 msgstr ""
